# dotfilet

./: .gitignore  .mise.toml  AGENTS.md  APACHEv2-LICENSE.md  Cargo.toml  GEMINI.md  README.md  dprint.json  package.json
.agents/commands/: design.md  work.md
.claude/: settings.json
.gemini/: settings.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: design.md  research.md  spec.md  task.md
.github/workflows/: claude-code-review.yml
crates/dotfilet-agent/: Cargo.toml
crates/dotfilet-agent/src/: main.rs
crates/dotfilet-cli/: Cargo.toml
crates/dotfilet-cli/src/: macros.rs  main.rs  styles.rs
crates/dotfilet-cli/src/command/: dotfilet_command.rs  examples.rs  lifecycle.rs  macros.rs  mod.rs
crates/dotfilet-cli/src/commands/: agent.rs  apply.rs  completion.rs  diff.rs  init.rs  mod.rs
crates/dotfilet-cli/src/commands/agent/: associate.rs  mod.rs  start.rs  stop.rs
crates/dotfilet-cli/src/ui/: mod.rs  style.rs
crates/dotfilet-core/: Cargo.toml
crates/dotfilet-core/src/: lib.rs
crates/dotfilet-rpc/: Cargo.toml
crates/dotfilet-rpc/src/: lib.rs
docs/: CLI-Help-Design.md  CLI-Help-Examples.md  Configuration-Schema.md  Design.md  Plugin Protocol.md  Roadmap.md
examples/multi-host/: variables.cue
examples/multi-host/_dynamic/: environment.cue
examples/multi-host/hosts/: personal-laptop.cue  work-laptop.cue
examples/multi-host/macos/: dock.cue
examples/multi-host/programs/: 1password.cue  ghostty.cue  google-chrome.cue  slack.cue  visual-studio-code.cue
plugins/macos/defaults/: Cargo.toml
plugins/macos/defaults/src/: main.rs
plugins/macos/dock/: Cargo.toml
plugins/macos/dock/src/: main.rs
plugins/programs/google-chrome/: Cargo.toml
plugins/programs/google-chrome/src/: main.rs
