[package]
name = "dotfilet-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Background sync agent for dotfilet"

[[bin]]
name = "dotfilet-agent"
path = "src/main.rs"

[dependencies]