[package]
name = "dotfilet-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
description = "Bi-directional configuration management for apps and system settings."

[[bin]]
name = "dotfilet"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
regex = "1.11.2"
