[package]
name = "dotfilet-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared core library for dotfilet"

[lib]
name = "dotfilet_core"
path = "src/lib.rs"

[dependencies]