[package]
name = "dotfilet-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared core library for dotfilet"

[lib]
name = "dotfilet_core"
path = "src/lib.rs"

[dependencies]
