[package]
name = "dotfilet-rpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "JSON-RPC client library for dotfilet plugins"

[lib]
name = "dotfilet_rpc"
path = "src/lib.rs"

[dependencies]