[package]
name = "dotfilet-plugin-macos-defaults"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "macOS defaults plugin for dotfilet"

[[bin]]
name = "dotfilet-plugin-macos-defaults"
path = "src/main.rs"

[dependencies]