[package]
name = "dotfilet-plugin-macos-defaults"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
description = "macOS defaults plugin for dotfilet"

[[bin]]
name = "dotfilet-plugin-macos-defaults"
path = "src/main.rs"

[dependencies]
