[package]
name = "dotfilet-plugin-macos-dock"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "macOS Dock plugin for dotfilet"

[[bin]]
name = "dotfilet-plugin-macos-dock"
path = "src/main.rs"

[dependencies]