[package]
name = "dotfilet-plugin-macos-dock"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
description = "macOS Dock plugin for dotfilet"

[[bin]]
name = "dotfilet-plugin-macos-dock"
path = "src/main.rs"

[dependencies]
