[package]
name = "dotfilet-plugin-google-chrome"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Google Chrome plugin for dotfilet"

[[bin]]
name = "dotfilet-plugin-google-chrome"
path = "src/main.rs"

[dependencies]