[package]
name = "dotfilet-plugin-google-chrome"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
description = "Google Chrome plugin for dotfilet"

[[bin]]
name = "dotfilet-plugin-google-chrome"
path = "src/main.rs"

[dependencies]
